Fixed errors+implemented all endpoints in frontend
