# service/api/api-handler.go
@@ -17,7 +17,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/users/:userID/ban/:bannedID", rt.wrap(rt.banUser))
 	rt.router.DELETE("/users/:userID/ban/:bannedID", rt.wrap(rt.unbanUser))
 	rt.router.POST("/posts", rt.wrap(rt.uploadPhoto))
-	rt.router.GET("/posts/:postID", rt.wrap(rt.getImage))
+	rt.router.GET("/photos/:postID", rt.wrap(rt.getImage))
+	rt.router.GET("/posts/:postID", rt.wrap(rt.getUserPost))
 	rt.router.DELETE("/posts/:postID", rt.wrap(rt.deletePhoto))
 	rt.router.POST("/posts/:postID/comments", rt.wrap(rt.commentPhoto))
 	rt.router.DELETE("/posts/:postID/comments/:commentID", rt.wrap(rt.uncommentPhoto))
